arm64: dts: renesas: kakip-es1: add gpio-line-names node definition
This commit is in order to match raspberrypi's 40-pin pinout definition.
Already tested using gpioinfo command:

$ gpioinfo
gpiochip0 - 96 lines:
        line   0:      unnamed       unused   input  active-high
        line   1:      unnamed       unused   input  active-high
        line   2:      unnamed       unused  output  active-high
        line   3:      unnamed       unused  output  active-high
        line   4:      unnamed       unused   input  active-high
        line   5:      unnamed       unused   input  active-high
        line   6:      unnamed       unused   input  active-high
        line   7:      unnamed       unused   input  active-high
        line   8:      unnamed       unused   input  active-high
        line   9:      unnamed       unused   input  active-high
        line  10:      unnamed       unused   input  active-high
        line  11:      unnamed       unused   input  active-high
        line  12:      unnamed       unused   input  active-high
        line  13:      unnamed       unused   input  active-high
        line  14:      unnamed       unused   input  active-high
        line  15:      unnamed       unused   input  active-high
        line  16:      unnamed       unused   input  active-high
        line  17:      unnamed       unused   input  active-high
        line  18:      unnamed       unused   input  active-high
        line  19:      unnamed       unused   input  active-high
        line  20:      unnamed       unused   input  active-high
        line  21:      unnamed       unused   input  active-high
        line  22:      unnamed       unused   input  active-high
        line  23:      unnamed       unused   input  active-high
        line  24:      unnamed       kernel   input  active-high [used]
        line  25:      unnamed       kernel   input  active-high [used]
        line  26:      unnamed       kernel   input  active-high [used]
        li

--- a/arch/arm64/boot/dts/renesas/kakip-es1.dts
+++ b/arch/arm64/boot/dts/renesas/kakip-es1.dts
@@ -211,6 +211,20 @@
 };
 
 &pinctrl {
+	gpio-line-names = \
+	"", "", "", "","", "", "", "", \
+	"", "", "", "","", "", "", "", \
+	"", "", "", "","", "", "", "", \
+	"", "", "", "","", "", "", "", \
+	"", "", "", "","", "", "", "", \
+	"", "", "", "","", "", "", "", \
+	"", "", "", "","", "", "", "", \
+	"", "GPIO4", "GPIO14", "GPIO15","GPIO5", "", "GPIO2", "GPIO3", \
+	"", "", "GPIO16", "GPIO17","GPIO0", "GPIO1", "", "", \
+	"GPIO10", "GPIO9", "GPIO11", "GPIO8","GPIO7", "GPIO18", "GPIO19", "GPIO21", \
+	"", "", "", "","GPIO12", "GPIO13", "GPIO20", "GPIO6", \
+	"GPIO22", "GPIO24", "GPIO25", "GPIO26","GPIO27", "GPIO23", "", "";
+
 #if (SEL_CAN01_HEADER)
 	can0_pins: can0 {
 		pinmux = <RZG2L_PORT_PINMUX(8, 0, 5)>, /* TX */
