--- a/arch/arm64/boot/dts/renesas/Makefile
+++ b/arch/arm64/boot/dts/renesas/Makefile
@@ -100,3 +100,5 @@ dtb-$(CONFIG_ARCH_R9A09G057) += r9a09g057h4-evk-alpha.dtb
 dtb-$(CONFIG_ARCH_R9A09G057) += r9a09g057h4-evk-ver1.dtb
 dtb-$(CONFIG_ARCH_R9A09G057) += kakip-es1.dtb
 dtb-$(CONFIG_ARCH_R9A09G057) += kakip-es1-4gb.dtb
+
+subdir-y += overlays
