arm64: dts: renesas: overlays: add device overlay for pwm0

--- a/arch/arm64/boot/dts/renesas/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/overlays/Makefile
@@ -1,1 +1,2 @@
-dtbo-$(CONFIG_ARCH_R9A09G057) += kakip-es1-spi0.dtbo
+dtbo-$(CONFIG_ARCH_R9A09G057) += kakip-es1-spi0.dtbo \
+				 kakip-es1-pwm0.dtbo \
