--- a/arch/arm64/boot/dts/renesas/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/overlays/Makefile
@@ -1,3 +1,4 @@
 dtbo-$(CONFIG_ARCH_R9A09G057) += kakip-es1-spi0.dtbo \
 				 kakip-es1-pwm0.dtbo \
 				 kakip-es1-pwm1.dtbo \
+				 kakip-es1-sci5-to-gpio.dtbo \
