--- a/arch/arm64/configs/kakip.config
+++ b/arch/arm64/configs/kakip.config
@@ -5618,6 +5618,7 @@ CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_DEBUG is not set
 # CONFIG_PWM_FSL_FTM is not set
+CONFIG_PWM_GPIO=y
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_GPT_RZG2L=y
 CONFIG_POEG_RZG2L=y
