Add support for imx219

--- a/arch/arm64/configs/kakip.config
+++ b/arch/arm64/configs/kakip.config
@@ -3590,6 +3590,7 @@ CONFIG_VIDEO_OV5645=y
 # CONFIG_VIDEO_MT9V011 is not set
 # CONFIG_VIDEO_MT9V032 is not set
 # CONFIG_VIDEO_MT9V111 is not set
+CONFIG_VIDEO_TEVS=y
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_VIDEO_M5MOLS is not set
