arm64: dts: renesas: overlays: add device overlay for imx462 camera

--- a/arch/arm64/boot/dts/renesas/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/overlays/Makefile
@@ -3,3 +3,4 @@ dtbo-$(CONFIG_ARCH_R9A09G057) += kakip-es1-spi0.dtbo \
 				 kakip-es1-pwm1.dtbo \
 				 kakip-es1-sci5-to-gpio.dtbo \
 				 kakip-es1-imx219.dtbo \
+				 kakip-es1-imx462.dtbo
