--- a/arch/arm64/configs/kakip.config
+++ b/arch/arm64/configs/kakip.config
@@ -2639,6 +2639,7 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
 CONFIG_I2C_RIIC=y
+CONFIG_I2C_RSCI=y
 # CONFIG_I2C_RK3X is not set
 CONFIG_I2C_SH_MOBILE=y
 # CONFIG_I2C_SIMTEC is not set
