--- a/arch/arm64/configs/kakip.config
+++ b/arch/arm64/configs/kakip.config
@@ -3561,7 +3561,7 @@ CONFIG_VIDEO_IMX219=y
 # CONFIG_VIDEO_IMX290 is not set
 # CONFIG_VIDEO_IMX319 is not set
 # CONFIG_VIDEO_IMX355 is not set
-# CONFIG_VIDEO_ECAM_IMX462 is not set
+CONFIG_VIDEO_ECAM_IMX462=y
 # CONFIG_VIDEO_OV2640 is not set
 # CONFIG_VIDEO_OV2659 is not set
 # CONFIG_VIDEO_OV2680 is not set
