--- a/arch/arm64/configs/kakip.config
+++ b/arch/arm64/configs/kakip.config
@@ -3851,6 +3851,7 @@ CONFIG_DRM_DW_HDMI_CEC=y
 # CONFIG_TINYDRM_REPAPER is not set
 # CONFIG_TINYDRM_ST7586 is not set
 # CONFIG_TINYDRM_ST7735R is not set
+# CONFIG_DRM_PIXPAPER is not set
 # CONFIG_DRM_PL111 is not set
 # CONFIG_DRM_XEN is not set
 # CONFIG_DRM_LIMA is not set
